// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResult matches snapshot 1`] = `
<div>
  <ul>
    <li
      aria-label="mock aria label"
      class="sc-bcXHqe fJGIbY"
      id="0"
    >
      <div
        class="sc-gswNZR kAtizF"
      >
        <h3>
          <a
            href="https://google.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            <span>
              owner
              /
            </span>
            <span>
              name
            </span>
          </a>
        </h3>
        <div>
          mock description
        </div>
      </div>
      <div
        class="sc-dkrFOg eTqXsG"
      >
        <p>
          Stars:
        </p>
        <p>
          <a
            href="https://google.com/stargazers"
          >
            0
          </a>
        </p>
      </div>
      <div
        class="sc-hLBbgP hWJglC"
      >
        <p>
          License:
        </p>
        <p>
          mit
        </p>
      </div>
    </li>
  </ul>
</div>
`;

exports[`SearchResult matches snapshot for skeleton 1`] = `
<div>
  <ul>
    <li
      class="sc-bcXHqe fJGIbY"
    >
      <div
        class="sc-gswNZR kAtizF"
      >
        <h3
          class="sc-eDvSVe eVZopV"
          height="21px"
          width="200px"
        />
        <div
          class="sc-eDvSVe lcvYht"
          height="1em"
          width="90%"
        />
      </div>
      <div
        class="sc-dkrFOg eTqXsG"
      >
        <p>
          Stars:
        </p>
        <div
          class="sc-eDvSVe iVskNN"
          height="1em"
        />
      </div>
      <div
        class="sc-hLBbgP hWJglC"
      >
        <p>
          License:
        </p>
        <div
          class="sc-eDvSVe iVskNN"
          height="1em"
        />
      </div>
    </li>
  </ul>
</div>
`;
